Adicionado estilos iniciais

--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css">
     <link rel="stylesheet" href="./css/style.css" />
     <title>Dashboard</title>
   </head>
 
   <body>
-    <aside>
+    <aside class="sidebar">
         <div class="dashbord">
-            
+          <h1>PortalEscolar</h1>  
+        </div>
+        <div class="menu-box">
+            <div class="menu">
+                <ul>
+                    <li><a href="#deshboard"><i class="ri-dashboard-fill"></i>Dashboard</a></li>
+                    <li><a href="#studants"> </li>a></li>
+                </ul>
+            </div>
         </div>
     </aside>
 
