--- a/index.html
+++ b/index.html
@@ -1,34 +1,63 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css">
     <link rel="stylesheet" href="./css/style.css" />
     <title>Dashboard</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <aside class="sidebar">
         <div class="dashbord">
-          <h1>PortalEscolar</h1>  
+            <h1>PortalEscolar</h1>
         </div>
         <div class="menu-box">
-            <div class="menu">
-                <ul>
-                    <li><a href="#deshboard"><i class="ri-dashboard-fill"></i>Dashboard</a></li>
-                    <li><a href="#studants"> </li>a></li>
-                </ul>
-            </div>
+                <div class="menu">
+                    <ul>
+                        <li class="active"><a href="#deshboard"><i class="ri-dashboard-fill"></i>Dashboard</a></li>
+                        <li><a href="#studants"> <i class="ri-user-fill"></i>Studants</li></a></li>
+                        <li><a href="#professors"><i class="ri-user-2-fill"></i>Teachers</li></a></li>
+                        <li><a href="#courses"><i class="ri-book-fill"></i>Classes</li></a></li>
+                        <li><a href="#grades"><i class="ri-file-list-fill"></i>Reports</li></a></li>
+                        <li><a href="#settings"><i class="ri-settings-5-fill"></i>Settings</li></a></li>
+                    </ul>
+                </div>
         </div>
+        <i class="ri-settings-4-fill set"></i>
     </aside>
 
+    <main class="main">
+        <header class="topbar">
+            <div class="input-box">
+                <input type="text" placeholder="Search Here">
+                <i class="ri-search-line"></i>
+            </div>
+            <div class="topbar-info">
+                <div class="icon">
+                    <i class="ri-notification-3-line"></i>
+                    <i class="ri-mail-line"></i>
+                    <i class="ri-user-line"></i>
+                </div>
+
+                <div class="profile">
+                    <span>John Doe</span>
+                    <img src="" alt="">
+                </div>
+
+            </div>
+        </header>
+    </main>
 
 
 
-     
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.0/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/app.js"></script>
-  </body>
+</body>
+
 </html>
