--- a/index.html
+++ b/index.html
@@ -1,62 +1,88 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.9.1/fonts/remixicon.min.css">
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>Dashboard</title>
+    <meta name="description" content="PainelEscolar">
+    <link rel="stylesheet" href="css/style.css">
+    <title>PainelEscolar</title>
 </head>
 
 <body>
     <aside class="sidebar">
-        <div class="dashbord">
-            <h1>PortalEscolar</h1>
+        <div class="logo">
+            <h1>Painel<span>Escolar</span></h1>
         </div>
-        <div class="menu-box">
-                <div class="menu">
-                    <ul>
-                        <li class="active"><a href="#deshboard"><i class="ri-dashboard-fill"></i>Dashboard</a></li>
-                        <li><a href="#studants"> <i class="ri-user-fill"></i>Studants</li></a></li>
-                        <li><a href="#professors"><i class="ri-user-2-fill"></i>Teachers</li></a></li>
-                        <li><a href="#courses"><i class="ri-book-fill"></i>Classes</li></a></li>
-                        <li><a href="#grades"><i class="ri-file-list-fill"></i>Reports</li></a></li>
-                        <li><a href="#settings"><i class="ri-settings-5-fill"></i>Settings</li></a></li>
-                    </ul>
-                </div>
+        <div class="menu">
+            <ul class="menu-box">
+                <li class="active">
+                    <i class="ri-dashboard-fill"></i>
+                    <a href="#home">Dashboard</a>
+                </li>
+                <li>
+                    <i class="ri-user-fill"></i>
+                    <a href="#Studants">Studants</a>
+                </li>
+                <li>
+                    <i class="ri-user-2-fill"></i>
+                    <a href="#teacher">Teachers</a>
+                </li>
+                <li>
+                    <i class="ri-group-fill"></i>
+                    <a href="#classes">Classes</a>
+                </li>
+                <li>
+                    <i class="ri-calendar-2-fill"></i>
+                    <a href="#attendace">Attendance</a>
+                </li>
+                <li>
+                    <i class="ri-file-excel-fill"></i>
+                    <a href="#exames">Exams</a>
+                </li>
+                <li>
+                    <i class="ri-bar-chart-fill"></i>
+                    <a href="#reports">Reports</a>
+                </li>
+                <li>
+                    <i class="ri-settings-3-fill"></i>
+                    <a href="#setting">Settings</a>
+                </li>
+            </ul>
         </div>
-        <i class="ri-settings-4-fill set"></i>
+        <div class="icon">
+            <div class="bolinha"></div>
+            <i class="ri-settings-4-fill"></i>
+        </div>
     </aside>
 
     <main class="main">
-        <header class="topbar">
-            <div class="input-box">
-                <input type="text" placeholder="Search Here">
-                <i class="ri-search-line"></i>
+        <header class="header">
+            <div class="serch">
+                <input type="text" placeholder="Search">
+                <button type="submit"><i class="ri-search-line"></i></button>
             </div>
-            <div class="topbar-info">
-                <div class="icon">
-                    <i class="ri-notification-3-line"></i>
-                    <i class="ri-mail-line"></i>
-                    <i class="ri-user-line"></i>
+            <div class="noti">
+                <div class="info">
+                    <i class="ri-notification-3-fill"></i>
+                    <i class="ri-mail-fill"></i>
                 </div>
-
-                <div class="profile">
-                    <span>John Doe</span>
-                    <img src="" alt="">
+                <div class="people">
+                    <p>Giovani</p>
+                    <img src="" alt="Profile">
                 </div>
-
             </div>
         </header>
+
+        <section>
+            
+        </section>
     </main>
 
 
-
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.0/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net"></script>
     <script src="js/app.js"></script>
 </body>
 
